# RefEngine

./: .gitignore  .gitmodules  AIEOpenGL.sln  AIEOpenGL.vcxproj  AIEOpenGL.vcxproj.filters  CMakeLists.txt  MakeVisualStudio2015Project.cmd  MakeXcodeProject.command  README.md
Engine/: CMakeLists.txt
Engine/src/: Application.cpp  Application.h  BaseApplication.cpp  Engine.cpp  Engine.h  FBXFile.cpp  FBXFile.h  GameObjects.h  Gizmos.cpp  Window.cpp  Window.h
Engine/src/Components/: OrbitComponent.cpp  OrbitComponent.h  RenderModeComponent.h
Engine/src/Engine/: BoundingVolume.cpp  BoundingVolume.h  BufferAccessor.h  Camera.cpp  Camera.h  Component.h  GLEnum.h  GameObject.cpp  GameObject.h  GeometryCreator.cpp  GeometryCreator.h  Helpers.cpp  Helpers.h  Input.h  InputManager.cpp  InputManager.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.h  Primitive.cpp  Primitive.h  Program.cpp  Program.h  RenderPass.cpp  RenderPass.h  Renderable.h  ResourceCreator.cpp  ResourceCreator.h  Shape.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.cpp  Vertex.h  VertexAttributes.cpp  VertexAttributes.h  (+1 more)
Engine/src/File/: FBXAnimation.cpp  FBXAnimation.h  FBXFile.cpp  FBXFile.h  FBXMeshNode.cpp  FBXMeshNode.h  FBXNode.cpp  FBXNode.h  FBXVertex.h
Engine/src/GameObjects/: FBXMeshGameObject.cpp  FBXMeshGameObject.h  ParticleEmitterGameObject.cpp  ParticleEmitterGameObject.h  ProceduralGenerationGameObject.cpp  ProceduralGenerationGameObject.h  SpriteSheetQuadGameObject.cpp  SpriteSheetQuadGameObject.h  TexturedQuadGameObject.cpp  TexturedQuadGameObject.h  VertexColoredGridGameObject.cpp  VertexColoredGridGameObject.h
Engine/src/components/: CameraComponent.h  FlyComponent.cpp  FlyComponent.h  RenderModeComponent.cpp  TransformComponent.h
Engine/src/data/: Buffer.h  BufferAccessor.h  Primitive.h  Vertex.h  VertexAttributes.cpp  VertexAttributes.h
Engine/src/engine/: GameObjectManager.cpp  GameObjectManager.h  Window.h
Engine/src/fbx/: FBXAnimation.h  FBXFile.cpp  FBXMeshNode.cpp  FBXMeshNode.h  FBXNode.h
Engine/src/gameobjects/: CameraGameObject.h  FlyCameraGameObject.cpp  FlyCameraGameObject.h
Engine/src/graphics/: GLEnum.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  RefOpenGL.h  RenderPass.cpp  RenderPass.h  Renderable.h  Texture.h  gl_core_3_3.c  gl_core_3_3.h
Engine/src/input/: Input.h  InputEventHandler.h  InputManager.cpp  InputManager.h
Engine/src/test/: Test.cpp  Test.h
EngineGLFW/: CMakeLists.txt
EngineGLFW/src/: ApplicationGLFW.cpp  ApplicationGLFW.h  InputManagerGLFW.cpp  InputManagerGLFW.h  WindowGLFW.cpp  WindowGLFW.h
EngineQT/: CMakeLists.txt
EngineQT/src/: ApplicationQT.cpp  ApplicationQT.h  InputManagerQT.cpp  InputManagerQT.h  QRefEngineWidget.cpp  QRefEngineWidget.h  WindowQT.cpp  WindowQT.h
TestBed/: CMakeLists.txt
TestBed/src/: TestApplication.cpp  TestApplication.h  main.cpp
TestBed/src/GameObjects/: FBXMeshGameObject.h  ProceduralGenerationGameObject.cpp  SpriteSheetQuadGameObject.h
TestBedGLFW/: CMakeLists.txt
TestBedGLFW/src/: config.h.in  main.cpp
TestBedQT/: CMakeLists.txt
TestBedQT/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
cmake/: FindFBX.cmake  FindQT5Widgets.cmake  FindVLD.cmake  GenerateEngineExecutable.cmake
data/models/Pyro/: Pyro_N.tga
data/models/pyro/: Pyro_D.tga  Pyro_S.tga
data/models/soulspear/: soulspear.mtl  soulspear_diffuse.tga  soulspear_normal.tga  soulspear_specular.tga
data/shaders/: boxBlur.frag  color.vert  default.vert  depth.frag  distort.frag  fragLit.vert  heightMap.vert  lightProjection.vert  normal.vert  normalDebug.frag  red.frag  redChannel.frag  shadow.frag  shadow.vert  skinning.vert  spriteAnimation.frag  tex.vert  texNormal.vert  textured.vert  texturedFlipped.vert  texturedNormal.vert  texturedReflected.vert  texturedVertLit.frag  texturedVertexLit.frag  texured.frag  uvDebug.frag  vertexColor.frag  vertexLit.frag
dep/glfw-3.1.2/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
dep/glfw-3.1.2/src/Debug/: glfw3.lib
dep/glfw-3.1.2/src/Release/: glfw3.lib
src/: BaseApplication.cpp  BaseApplication.h  Camera.cpp  Camera.h  FBXFile.cpp  FBXFile.h  FBXMesh.cpp  FBXMesh.h  GameObject.h  GeometryCreator.cpp  GeometryCreator.h  Gizmos.cpp  Gizmos.h  Grid.cpp  Grid.h  Helpers.cpp  Mesh.cpp  Mesh.h  ParticleEmitter.cpp  ParticleEmitter.h  Program.cpp  Program.h  ResourceCreator.cpp  ResourceCreator.h  SpriteSheetQuad.cpp  SpriteSheetQuad.h  TestApplication.cpp  TestApplication.h  TexturedQuad.cpp  TexturedQuad.h  Transform.cpp  Vertex.h  VertexColoredGrid.cpp  VertexColoredGrid.h  main.cpp
src/Engine/: BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  GameObject.h  GeometryCreator.cpp  GeometryCreator.h  Helpers.cpp  Helpers.h  Mesh.h  Program.cpp  Program.h  RenderPass.cpp  RenderPass.h  Renderable.h  ResourceCreator.cpp  ResourceCreator.h  Sampler.h  Texture.cpp  Texture.h  Vertex.h
src/GameObjects/: FBXMeshGameObject.cpp  FBXMeshGameObject.h  GameObjects.h  Particle.h  ParticleEmitterGameObject.cpp  ParticleEmitterGameObject.h  ProceduralGenerationGameObject.cpp  ProceduralGenerationGameObject.h  SpriteSheetQuadGameObject.cpp  TexturedQuadGameObject.cpp  TexturedQuadGameObject.h  VertexColoredGridGameObject.cpp  VertexColoredGridGameObject.h
